render index page

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -5,7 +5,7 @@
 <h1>About the Cryptid Collector</h1>
 <hr />
 <p>
-  I like long romantic walks down the produce aisle. Also, I am currently job seeking!
+  I like long romantic walks through the unknown. Also, I am currently job seeking!
 </p>
 
 {% endblock %}
