--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -24,6 +24,7 @@
     </div>
     <nav>
       <ul>
+        <li><a href="/cryptids">All Cryptids</a></li>
         <li><a href="/about">About</a></li>
       </ul>
     </nav>
