--- a/main_app/templates/cryptids/index.html
+++ b/main_app/templates/cryptids/index.html
@@ -18,23 +18,25 @@
 <section class="card-container">
   {% for cryptid in cryptids %}
     <div class="card">
-      <div class="card-content">
-        <div class="card-img-container">
-          <img 
-            src="{% static 'images/placeholder.png' %}" 
-            alt="A placeholder cryptid"
-            class="card-img"
-          >
+      <a href="/cryptids/{{ cryptid.id }}">
+        <div class="card-content">
+          <div class="card-img-container">
+            <img 
+              src="{% static 'images/placeholder.png' %}" 
+              alt="A placeholder cryptid"
+              class="card-img"
+            >
+          </div>
+          <h2 class="card-title">{{ cryptid.name }}</h2>
+          {% if cryptid.other %}
+            <p>AKA {{ cryptid.other }}</p>
+          {% comment %} {% else %}
+            <p>The {{ cryptid.name }}.</p> {% endcomment %}
+          {% endif %}
+          <p><small>{{ cryptid.location }}</small></p>
+          <p><small>{{ cryptid.description }}</small></p>
         </div>
-        <h2 class="card-title">{{ cryptid.name }}</h2>
-        {% if cryptid.other %}
-          <p>AKA {{ cryptid.other }}</p>
-        {% comment %} {% else %}
-          <p>The {{ cryptid.name }}.</p> {% endcomment %}
-        {% endif %}
-        <p><small>{{ cryptid.location }}</small></p>
-        <p><small>{{ cryptid.description }}</small></p>
-      </div>
+      </a>
     </div>
   {% endfor %}
 </section>
