fix a tag bug on index template

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="header-logo-container">
-      <a href="/home">
+      <a href="/">
         <img 
           src="{% static 'images/logo1.png' %}" 
           alt="The Cryptid Collector Logo"
