--- a/main_app/templates/cryptids/index.html
+++ b/main_app/templates/cryptids/index.html
@@ -18,7 +18,7 @@
 <section class="card-container">
   {% for cryptid in cryptids %}
     <div class="card">
-      <a href="{% url 'cryptids' cryptid.id %}">>
+      <a href="{% url 'cryptid_detail' cryptid.id %}">>
         <div class="card-content">
           <div class="card-img-container">
             <img 
