are url tags to nav bar

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -24,8 +24,8 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/cryptids">All Cryptids</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="{% url 'cryptids_index' %}">All Cryptids</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
   </header>
