implement add cryptid functionality

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,6 +25,7 @@
     <nav>
       <ul>
         <li><a href="{% url 'cryptids_index' %}">All Cryptids</a></li>
+        <li><a href="{% url 'cryptids_create' %}">Add a Cryptid</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
