--- a/main_app/templates/main_app/cryptid_form.html
+++ b/main_app/templates/main_app/cryptid_form.html
@@ -8,7 +8,11 @@
 {% block content %}
 
 <div class="page-header">
-  <h1>Add a Cryptid</h1>
+ {% if object %}
+    <h1>Edit {{object.name}}</h1>
+  {% else %}
+    <h1>Add a Cryptid</h1>
+  {% endif %}
   <img src="{% static 'images/swamp-creature.png' %}" alt="A swampy friend"/>
 </div>
 {% comment %} 
