--- a/main_app/templates/cryptids/detail.html
+++ b/main_app/templates/cryptids/detail.html
@@ -59,6 +59,7 @@
     </div>
     <h3>Add a Sighting</h3>
     <form
+      action="{% url 'add_sighting' cryptid.id %}"
       method="post" 
       class="subsection-section"
     >
