--- a/main_app/templates/cryptids/detail.html
+++ b/main_app/templates/cryptids/detail.html
@@ -68,6 +68,7 @@
       <button type="submit" class="btn submit">Add Sighting</button>
     </form>
     <h3>Past Sightings</h3>
+    {% if cryptid.sighting_set.all.count %}
     <table>
       <thead>
         <tr><th>Date</th><th>Time of Day</th><th>Notes</th></tr>
@@ -82,6 +83,9 @@
         {% endfor %}
       </tbody>
     </table>
+    {% else %}
+      <p class="subsection-section">Add a {{cryptid.name}} sighting!</p>
+    {% endif %}
   </section>
 </div>
 
