render evidence data

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,7 +25,9 @@
     <nav>
       <ul>
         <li><a href="{% url 'cryptids_index' %}">All Cryptids</a></li>
-        <li><a href="{% url 'cryptids_create' %}">Add a Cryptid</a></li>
+        <li><a href="{% url 'evidence_index' %}">All Evidence</a></li>
+        <li><a href="{% url 'cryptids_create' %}">Add New Cryptid</a></li>
+        <li><a href="{% url 'evidence_create' %}">Add New Evidence</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
       </ul>
     </nav>
