render evidence detail template

--- a/main_app/templates/main_app/evidence_list.html
+++ b/main_app/templates/main_app/evidence_list.html
@@ -26,7 +26,7 @@
     <a href="{% url 'evidence_detail' evidence.id %}">
       <div class="card-content">
         <h2>{{ evidence.name }}</h2>
-        <p>Beautiful {{ evidence.color }} evidence</p>
+        <p>beautiful {{ evidence.color }} proof</p>
       </div>
     </a>
   </div>
