implement update and delete evidence functionality

--- a/main_app/templates/main_app/evidence_list.html
+++ b/main_app/templates/main_app/evidence_list.html
@@ -25,7 +25,7 @@
     <div class="card-bg" style="background-color: {{ evidence.color }}"></div>
     <a href="{% url 'evidence_detail' evidence.id %}">
       <div class="card-content">
-        <h2>{{ evidence.name }}</h2>
+        <h2>{{ evidence.evidence }}</h2>
         <p>beautiful {{ evidence.color }} proof</p>
       </div>
     </a>
