--- a/main_app/templates/main_app/cryptid_form.html
+++ b/main_app/templates/main_app/cryptid_form.html
@@ -9,7 +9,7 @@
 
 <div class="page-header">
  {% if object %}
-    <h1>Edit {{object.name}}</h1>
+    <h1>Edit: {{object.name}}</h1>
   {% else %}
     <h1>Add a Cryptid</h1>
   {% endif %}
