--- a/main_app/templates/main_app/evidence_form.html
+++ b/main_app/templates/main_app/evidence_form.html
@@ -8,11 +8,11 @@
 {% block content %}
 <div class="page-header">
   {% if object %}
-    <h1>Edit {{object.evidence}}</h1>
+    <h1>Edit: {{object.evidence}}</h1>
   {% else %}
     <h1>Add New Evidence</h1>
   {% endif %}
-  <img src="{% static 'images/swamp-creature.png' %}" alt="A swampy friend"/>
+  <img src="{% static 'images/proof.png' %}" alt="genuine proof"/>
 </div>
 <form action="" method="post" class="form-container" autocomplete="off">
   {% csrf_token %}
