--- a/main_app/templates/cryptids/detail.html
+++ b/main_app/templates/cryptids/detail.html
@@ -40,7 +40,7 @@
   </div>
 </section>
 
-<div class="sightings-toy-container">
+<div class="sightings-evidence-container">
   <section class="sightings">
     <div class="subsection-title">
       <h2>Sightings</h2>
@@ -93,6 +93,56 @@
     {% else %}
       <p class="subsection-section">Add a {{cryptid.name}} sighting!</p>
     {% endif %}
+  </section>
+  <section class="evidence">
+    <div class="subsection-title">
+      <h2>Evidence</h2>
+      <img src="{% static 'images/proof.png' %}" alt="genuine proof"/>
+      {% comment %} <img src="{% static 'images/A.png' %}" alt="A " /> {% endcomment %}
+      {% comment %} <img src="{% static 'images/B.png' %}" alt="B" /> {% endcomment %}
+    </div>
+    <h3>{{ cryptid.name }}'s Evidence</h3>
+    <div class="subsection-section">
+      {% if cryptid.evidence.count %}
+        {% for evidence in cryptid.evidence.all %}
+          <div class="evidence-container">
+            <div 
+              class="color-block"
+              style="background-color: {{ evidence.color }}"
+            ></div>
+            <a href="{% url 'evidence_detail' evidence.id %}">
+              <p>A {{ evidence.color }} {{ evidence.evidence }}</p>
+            </a>
+          </div>
+        {% endfor %}
+      {% else %}
+        <p class="no-evidence">No evidence that {{cryptid.name}} exists.</p>
+      {% endif %}
+    </div>
+    <h3>Available Evidence</h3>
+    <div class="subsection-section">
+      {% if evidence.count %}
+        {% for evidence in evidence.all %}
+          <div class="evidence-container">
+            <div 
+              class="color-block"
+              style="background-color: {{ evidence.color }}"
+            ></div>
+            <a href="{% url 'evidence_detail' evidence.id %}">
+              <p>{{ evidence.evidence }}</p>
+            </a>
+            <form action="" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn submit">Attach</button>
+            </form>
+          </div>
+        {% endfor %}
+      {% else %}
+        <p class="all-evidence">
+          {{cryptid.name}} already has all the available evidence 🥳
+        </p>
+      {% endif %}
+    </div>
   </section>
 </div>
 
