update sort on Cryptid model

--- a/main_app/templates/cryptids/detail.html
+++ b/main_app/templates/cryptids/detail.html
@@ -22,11 +22,19 @@
 
 <section class="cryptid-container">
   <div class="cryptid-img">
-    <img 
-      src="{% static 'images/placeholder.png' %}" 
-      alt="A placeholder cryptid"
-      class="card-img"
->
+    {% if cryptid.photo.url %}
+      <img 
+        src="{{cryptid.photo.url}}" 
+        alt="A photo of {{cryptid.name}}"
+        class="usr-img"
+      >
+    {% else %}
+      <img 
+        src="{% static 'images/placeholder.png' %}" 
+        alt="A placeholder cryptid"
+        class="card-img"
+      >
+    {% endif %}
   </div>
   <div class="cryptid-details">
     <h1>{{ cryptid.name }}</h1>
@@ -37,6 +45,22 @@
       <a href="{% url 'cryptids_update' cryptid.id %}" class="btn warn">Edit</a>
       <a href="{% url 'cryptids_delete' cryptid.id %}" class="btn danger">Delete</a>
     </div>
+    
+    <h3>Change {{ cryptid.name }}'s photo</h3>
+    <p id="file-name"></p>
+    <form 
+      action="{% url 'add_photo' cryptid.id %}"
+      enctype="multipart/form-data"
+      method="POST"
+    >
+      {% csrf_token %}
+      <label class="btn secondary">
+        Choose Photo
+        <input type="file" name="photo-file" id="file-input">
+      </label>
+      <button type="submit" class="btn submit">Upload Photo</button>
+    </form>
+
   </div>
 </section>
 
