update nav bar with log in/out

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -24,11 +24,17 @@
     </div>
     <nav>
       <ul>
+      {% if user.is_authenticated %}
         <li><a href="{% url 'cryptids_index' %}">All Cryptids</a></li>
         <li><a href="{% url 'evidence_index' %}">All Evidence</a></li>
         <li><a href="{% url 'cryptids_create' %}">Add New Cryptid</a></li>
         <li><a href="{% url 'evidence_create' %}">Add New Evidence</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'logout' %}">Log out</a></li>
+      {% else %}
+        <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'home' %}">Login</a></li>
+      {% endif %}
       </ul>
     </nav>
   </header>
