update splash image

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -9,7 +9,7 @@
 
 <section class="logo-container">
   <div class="cryptid-container">
-    <img src="{% static 'images/splash.png' %}" alt="The Cryptid Collector Cryptid" />
+    <img src="{% static 'images/splash2.png' %}" alt="The Cryptid Collector Cryptid" />
   </div>
   {% comment %} <img 
     src="{% static 'images/logonotext.png' %}" 
