--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,8 +6,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cryptid Collector</title>
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <link
+    rel="shortcut icon"
+    type="image/png"
+    href="{% static 'images/fav.png' %}"
+  >
+  <title>Cryptid Collector</title>
   {% block head %}
   {% endblock %}
 </head>
